<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/c_f875aa">

    <LinearLayout
        android:id="@+id/registerContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="40dp"
        android:background="@drawable/rounded_white_box"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="50dp"
        app:layout_constraintWidth_percent="0.9"
        app:layout_constraintHeight_percent="0.7"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintDimensionRatio="364:470" >

        <TextView
            android:id="@+id/registerTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/register"
            android:textColor="@color/c_075d92"
            android:textSize="32sp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/registerTop"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/enteremail"
            android:padding="10dp"
            android:textColor="@color/c_ff5252"
            android:textColorHint="@color/c_ff5252"
            android:textSize="20sp"
            android:layout_marginTop="24dp"
            android:autofillHints="email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/enterpassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/c_ff5252"
            android:textColorHint="@color/c_ff5252"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:autofillHints="password"/>

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/confirmpassword"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/c_ff5252"
            android:textColorHint="@color/c_ff5252"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:autofillHints="confirmpassword"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/button_bluestroke"
            android:elevation="2dp"
            android:padding="5dp"
            android:text="@string/register"
            android:textColor="@color/c_075d92"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/registerBottom"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
