<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/c_f875aa">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/search_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <TextView
                android:id="@+id/search_bar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/griddle_cakes"
                android:textStyle="bold"
                android:background="@drawable/search_bar_background"
                android:padding="14dp"
                android:textColor="@color/c_f875aa"
                android:textSize="20sp"
                android:gravity="center_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="530dp"
            android:layout_marginTop="12dp"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_card_background"
                    android:elevation="4dp"
                    android:orientation="horizontal"
                    android:padding="14dp">

                    <ImageView
                        android:id="@+id/recipeImage10"
                        android:layout_width="140dp"
                        android:layout_height="140dp"
                        android:layout_marginEnd="10dp"
                        android:clipToOutline="true"
                        android:contentDescription="@string/imagemenu10"
                        android:scaleType="centerCrop"
                        android:src="@drawable/menu10" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/recipeTitle10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/menu10"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/recipeDescription10"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/descmenu10"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="-25dp"
                            android:layout_marginTop="-16dp"
                            android:background="transparent"
                            android:text="@string/read_more"
                            android:textAllCaps="false"
                            android:textColor="@color/c_ff0000"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="-10dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/recipeTime10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginEnd="8dp"
                                android:background="@drawable/time_button_background"
                                android:drawableStart="@drawable/time_icon_scaled"
                                android:drawablePadding="3dp"
                                android:padding="5dp"
                                android:text="@string/min15"
                                android:textColor="@android:color/white"
                                android:textSize="12sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/recipeLevel10"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:background="@drawable/level_button_background"
                                android:drawablePadding="4dp"
                                android:padding="5dp"
                                android:text="@string/lvl0"
                                android:textColor="@android:color/white"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                app:drawableStartCompat="@drawable/spicy_icon_scaled" />

                            <ImageView
                                android:id="@+id/favoriteIcon10"
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_marginStart="12dp"
                                android:layout_marginTop="4dp"
                                android:contentDescription="@string/lovebtn"
                                android:src="@drawable/favorite_icon" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/buttonmenu"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:src="@drawable/menu"
            android:background="@drawable/button_3tap"
            android:scaleType="centerInside"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/menubtn"/>

        <ImageButton
            android:id="@+id/buttonsearch"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:src="@drawable/search"
            android:background="@drawable/button_3tap"
            android:scaleType="centerInside"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/searchbtn"/>

        <ImageButton
            android:id="@+id/buttonfav"
            android:layout_width="0dp"
            android:layout_height="110dp"
            android:layout_weight="1"
            android:src="@drawable/fav"
            android:background="@drawable/button_3tap"
            android:scaleType="centerInside"
            android:contentDescription="@string/favbtn"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>



